force-app/main/default/objects/Booking__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Agreement</label>
    <referenceTo>Agreement__c</referenceTo>
    <relationshipLabel>Originating Booking</relationshipLabel>
    <relationshipName>Originating_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>