force-app/main/default/objects/Booking__c/fields/Agreement_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Due_Date__c</fullName>
    <formula>Booking_Date__c + 45</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Due Date</label>
    <type>Date</type>
</CustomField>