force-app/main/default/objects/Booking__c/fields/Booking_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Booking_Amount_Paid__c</fullName>
    <label>Booking Amount Paid</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>