force-app/main/default/objects/Booking__c/fields/Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status__c</fullName>
    <label>Booking Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Confirmed</fullName><default>true</default><label>Confirmed</label></value>
            <value><fullName>Agreement Pending</fullName><default>false</default><label>Agreement Pending</label></value>
            <value><fullName>Agreement Signed</fullName><default>false</default><label>Agreement Signed</label></value>
            <value><fullName>Registered</fullName><default>false</default><label>Registered</label></value>
            <value><fullName>Possession Ready</fullName><default>false</default><label>Possession Ready</label></value>
            <value><fullName>Possessed</fullName><default>false</default><label>Possessed</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>