force-app/main/default/objects/Booking__c/fields/BSP_at_Booking__c.field-meta.xml
<CustomField>
    <fullName>BSP_at_Booking__c</fullName>
    <label>BSP at Booking</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>