force-app/main/default/objects/Booking__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Buyer Withdrew</fullName><default>false</default><label>Buyer Withdrew</label></value>
            <value><fullName>Financing Failed</fullName><default>false</default><label>Financing Failed</label></value>
            <value><fullName>Dispute</fullName><default>false</default><label>Dispute</label></value>
            <value><fullName>Admin Cancelled</fullName><default>false</default><label>Admin Cancelled</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>