force-app/main/default/objects/Booking__c/fields/Customer_Count__c.field-meta.xml
<CustomField>
    <fullName>Customer_Count__c</fullName>
    <label>Customer Count</label>
    <summaryForeignKey>Booking_Customer__c.Booking__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>