force-app/main/default/objects/Booking__c/fields/Escalation_Flag__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation Flag</label>
    <type>Checkbox</type>
</CustomField>