force-app/main/default/objects/Booking__c/fields/Joint_Booking__c.field-meta.xml
<CustomField>
    <fullName>Joint_Booking__c</fullName>
    <formula>Customer_Count__c &gt; 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Joint Booking</label>
    <type>Checkbox</type>
</CustomField>