force-app/main/default/objects/Booking__c/fields/NRI_Booking__c.field-meta.xml
<CustomField>
    <fullName>NRI_Booking__c</fullName>
    <formula>IF(ISBLANK(Primary_Buyer__c), FALSE, Primary_Buyer__r.NRI_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NRI Booking</label>
    <type>Checkbox</type>
</CustomField>