force-app/main/default/objects/Booking__c/fields/Payment_Plan_Instance__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Plan Instance</label>
    <referenceTo>Booking_Payment_Schedule__c</referenceTo>
    <relationshipLabel>Primary Booking</relationshipLabel>
    <relationshipName>Primary_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>