force-app/main/default/objects/Booking__c/fields/Possession__c.field-meta.xml
<CustomField>
    <fullName>Possession__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Possession</label>
    <referenceTo>Possession__c</referenceTo>
    <relationshipLabel>Originating Booking</relationshipLabel>
    <relationshipName>Originating_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>