force-app/main/default/objects/Booking__c/fields/Primary_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Buyer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Buyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings as Primary Buyer</relationshipLabel>
    <relationshipName>Bookings_Primary_Buyer</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>