force-app/main/default/objects/Booking__c/fields/Registration_Fees__c.field-meta.xml
<CustomField>
    <fullName>Registration_Fees__c</fullName>
    <label>Registration Fees</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>