force-app/main/default/objects/Booking__c/fields/RM_At_Booking__c.field-meta.xml
<CustomField>
    <fullName>RM_At_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RM at Booking</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Bookings as RM</relationshipLabel>
    <relationshipName>Bookings_As_RM</relationshipName>
    <type>Lookup</type>
</CustomField>