force-app/main/default/objects/Booking__c/fields/Source_CP__c.field-meta.xml
<CustomField>
    <fullName>Source_CP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source CP</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings Sourced</relationshipLabel>
    <relationshipName>Bookings_Sourced</relationshipName>
    <type>Lookup</type>
</CustomField>