force-app/main/default/objects/Booking__c/fields/Stamp_Duty__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty__c</fullName>
    <label>Stamp Duty</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>