force-app/main/default/objects/Booking__c/fields/Total_Consideration__c.field-meta.xml
<CustomField>
    <fullName>Total_Consideration__c</fullName>
    <formula>Quoted_Gross_Value__c + GST_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Consideration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>