force-app/main/default/objects/Booking__c/fields/Total_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding__c</fullName>
    <formula>Total_Consideration__c - Total_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>