force-app/main/default/objects/Booking__c/recordTypes/Commercial_Booking.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Booking</fullName>
    <active>true</active>
    <label>Commercial Booking</label>
</RecordType>