force-app/main/default/objects/Booking__c/recordTypes/Residential_Booking.recordType-meta.xml
<RecordType>
    <fullName>Residential_Booking</fullName>
    <active>true</active>
    <label>Residential Booking</label>
</RecordType>