force-app/main/default/objects/Booking__c/validationRules/Unit_Must_Be_Blocked_At_Booking.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_Must_Be_Blocked_At_Booking</fullName>
    <active>true</active>
    <description>The linked Unit must be in Blocked status at Booking creation. Booking directly from Available is not allowed — blocking is a required pre-step. Enforced per Naming Convention Appendix Section 7.</description>
    <errorConditionFormula>AND(ISNEW(), TEXT(Unit__r.Unit_Status__c) &lt;&gt; &quot;Blocked&quot;)</errorConditionFormula>
    <errorDisplayField>Unit__c</errorDisplayField>
    <errorMessage>The Unit must be in Blocked status before a Booking can be created.</errorMessage>
</ValidationRule>